fix: dark mode toggle

--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/svelte.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Flow Dashboard</title>
+    <script>
+      function changeTheme(matches) {
+        if (matches) {
+          document.documentElement.classList.add("dark");
+        } else {
+          document.documentElement.classList.remove("dark");
+        }
+      }
+
+      const mediaQuery = window.matchMedia("(prefers-color-scheme: dark)");
+      changeTheme(mediaQuery.matches);
+      mediaQuery.onchange = ({ matches }) => changeTheme(matches);
+    </script>
   </head>
   <body>
     <div id="app"></div>
